syntax = "proto3";

package bunmart.cart.v1;

option java_package = "com.nsbm.bunmart.cart.v1";
option java_multiple_files = true;

// CartService â€” carts and checkout. Product Catalog calls AddCartItem when frontend adds to cart; Cart calls Order.CreateOrderIntent; Order calls InvalidateCart after order placed.
service CartService {
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
  rpc AddCartItem(AddCartItemRequest) returns (AddCartItemResponse);
  rpc GetCartForCheckout(GetCartForCheckoutRequest) returns (GetCartForCheckoutResponse);
  rpc InvalidateCart(InvalidateCartRequest) returns (InvalidateCartResponse);
}

message CartItemInfo {
  string cart_item_id = 1;
  string product_id = 2;
  int32 quantity = 3;
  string unit_price = 4;
  string line_total = 5;
}

message CartInfo {
  string cart_id = 1;
  string user_id = 2;
  repeated CartItemInfo items = 3;
  string subtotal = 4;
  string discount_total = 5;
  string total = 6;
  string currency_code = 7;
}

message GetCartRequest {
  string user_id = 1;
  string session_id = 2;
}

message GetCartResponse {
  CartInfo cart = 1;
}

// Product Catalog calls this when frontend requests add-to-cart (frontend does not call Cart directly).
message AddCartItemRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
  string cart_id = 4;    // optional; if provided, add to this cart; otherwise create or use session cart
  string session_id = 5; // optional; for anonymous/session-based cart
}

message AddCartItemResponse {
  string cart_id = 1;
  CartInfo cart = 2; // updated cart after add
}

message GetCartForCheckoutRequest {
  string user_id = 1;
  string session_id = 2;
}

message GetCartForCheckoutResponse {
  CartInfo cart = 1;
  bool valid = 2;
  repeated string errors = 3;
}

message InvalidateCartRequest {
  string cart_id = 1;
  string order_id = 2;
  repeated string product_ids = 3;
}

message InvalidateCartResponse {
  bool invalidated = 1;
}
